# Facultate

./: README.md
AG/Project1/: Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  p1  p1.cpp
AG/Project2/: Project2.sln  Project2.vcxproj  Project2.vcxproj.filters  p2  p2.cpp  test.in  test.out
AG/Test/: Source.cpp  Test.sln  Test.vcxproj  Test.vcxproj.filters  test1.in
AG/TestPractice/: TestPractice.sln  TestPractice.vcxproj  main.cpp
AG/lab1/: in.txt  lab1.cpp  lab1.sln  lab1.vcxproj  lab1.vcxproj.filters
AG/lab1_prob2/: Source.cpp  lab1_prob2.sln  lab1_prob2.vcxproj
AG/lab2/: lab2.cpp  lab2.sln  lab2.vcxproj
AG/lab4/: lab4.sln  lab4.vcxproj  lab4.vcxproj.filters  p1.cpp
AG/lab5/: lab5.sln  lab5.vcxproj  lab5.vcxproj.filters  prob2.cpp
AG/test2/: Source.cpp  test2.sln  test2.vcxproj
AI/: 1.py
ASC/: 14.asm  14.lst  diaconescu_andrei_213-1.asm  diaconescu_andrei_213-1.lst  ex1.asm  ex1.lst  modul.asm  new.asm  new.lst  test.asm  test.lst  testt.asm  testt.lst
DB/: test.sql  test_1.sql  test_2.sql
FP/: README.MD
MAP/: aici.csv  build.gradle  friendships.csv  users.csv
OOP/lab1/: 6.cpp  CMakeLists.txt  lab1.c  lab1.h  lab1.sln  lab1.vcxproj  lab1.vcxproj.filters
OOP/lab1/x64/Debug/: lab1.exe.recipe  lab1.ilk  lab1.vcxproj.FileListAbsolute.txt  vc143.idb
OOP/lab1/x64/Debug/lab1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lab1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RC/: a.out  client.c  client_1c.c
SGBD/: lab3.rar
SO/: n.txt  need.txt
WEB/: lab2.rar
personalProjects/: README.MD
(+1379 files in other folders)
